--- a/src/main/java/com/krish/project/Sentiment/Analysis/frontend/secondSimpleform.html
+++ b/src/main/java/com/krish/project/Sentiment/Analysis/frontend/secondSimpleform.html
@@ -5,40 +5,84 @@
 
 <script>
     function scrapeAndAnalyze() {
-        const url = document.getElementById("urlInput").value;
+        const productUrl = document.getElementById("urlInput").value.trim();
+        const resultDiv = document.getElementById("result");
 
-        fetch("http://localhost:8080/api/scrape", {
-            method: "POST",
-            headers: {
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify(url)
+        if (!productUrl) {
+            resultDiv.innerHTML = "<p style='color: red;'>Please paste a product link.</p>";
+            return;
+        }
+
+        // Clear previous results and show loading state (optional)
+        resultDiv.innerHTML = "<p>Analyzing reviews, please wait...</p>";
+
+        // Construct the API URL with the productUrl as a query parameter
+        const apiUrl = `http://localhost:8080/api/scrape?url=${encodeURIComponent(productUrl)}`;
+
+        fetch(apiUrl, {
+            method: "GET" // Changed to GET
+            // No headers or body needed for this GET request
         })
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) {
+                    // If the response is not OK, try to parse error as JSON, otherwise throw HTTP error
+                    return response.json().catch(() => {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }).then(errData => {
+                        // Use a more specific error message if available from backend
+                        throw new Error(errData.message || errData.error || `Server error: ${response.status}`);
+                    });
+                }
+                return response.json();
+            })
             .then(data => {
-                const resultDiv = document.getElementById("result");
-                resultDiv.innerHTML = ""; // Clear previous results
+                resultDiv.innerHTML = ""; // Clear "loading" message
 
-                data.forEach((item, index) => {
-                    const reviewDiv = document.createElement("div");
-                    reviewDiv.style.border = "1px solid #ccc";
-                    reviewDiv.style.padding = "10px";
-                    reviewDiv.style.marginBottom = "10px";
-                    reviewDiv.style.borderRadius = "8px";
+                if (data && data.length > 0) {
+                    data.forEach((item, index) => {
+                        const reviewDiv = document.createElement("div");
+                        reviewDiv.style.border = "1px solid #ccc";
+                        reviewDiv.style.padding = "10px";
+                        reviewDiv.style.marginBottom = "10px";
+                        reviewDiv.style.borderRadius = "8px";
 
-                    reviewDiv.innerHTML = `<strong>Review ${index + 1}:</strong><br>${item.review}<br><br><strong>Aspect Sentiments:</strong><ul>`;
+                        // Corrected field names: item.reviewText and item.aspectSentiments
+                        let reviewHTML = `<strong>Review ${index + 1}:</strong><br>${escapeHTML(item.reviewText)}<br>`;
+                        reviewHTML += `<br><strong>Overall Sentiment:</strong> ${escapeHTML(item.overallSentiment)}<br>`;
+                        reviewHTML += `<br><strong>Aspect Sentiments:</strong><ul>`;
 
-                    for (const [aspect, sentiment] of Object.entries(item.aspects)) {
-                        reviewDiv.innerHTML += `<li><strong>${aspect}</strong>: ${sentiment}</li>`;
-                    }
+                        if (item.aspectSentiments && Object.keys(item.aspectSentiments).length > 0) {
+                            for (const [aspect, sentiment] of Object.entries(item.aspectSentiments)) {
+                                reviewHTML += `<li><strong>${escapeHTML(aspect)}</strong>: ${escapeHTML(sentiment)}</li>`;
+                            }
+                        } else {
+                            reviewHTML += `<li>No specific aspects detected.</li>`;
+                        }
 
-                    reviewDiv.innerHTML += `</ul>`;
-                    resultDiv.appendChild(reviewDiv);
-                });
+                        reviewHTML += `</ul>`;
+                        reviewDiv.innerHTML = reviewHTML;
+                        resultDiv.appendChild(reviewDiv);
+                    });
+                } else {
+                    resultDiv.innerHTML = "<p>No reviews were found or analyzed for this product.</p>";
+                }
             })
             .catch(error => {
                 console.error("Error:", error);
-                document.getElementById("result").innerText = "Something went wrong 😢";
+                resultDiv.innerHTML = `<p style='color: red;'>Something went wrong: ${error.message} 😢</p>`;
             });
+    }
+
+    // Utility function to escape HTML to prevent XSS (if not already present)
+    function escapeHTML(str) {
+        if (str === null || str === undefined) {
+            return '';
+        }
+        return str.toString()
+            .replace(/&/g, '&amp;')
+            .replace(/</g, '&lt;')
+            .replace(/>/g, '&gt;')
+            .replace(/"/g, '&quot;')
+            .replace(/'/g, '&#039;');
     }
 </script>
